# MocksCaml

./: .gitignore  Makefile  Makefile.config.in  README.md  configure.ac  default.nix  flake.nix
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  claude-review.yml  claude.yml  nix-github-actions-trusted.yml  nix-github-actions.yml  ocamlformat.yml
parsing/: parser.mly
scripts/: 80ch.sh  fmt.sh
src/: hello.ml
test/: hello.reference
tools/ci/actions/: check-fmt.sh
tools/ci/local-opam/: README.md
tools/metrics-mock/: README.md  convert_metrics.py  run-local.sh
